--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,16 @@
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        test
         
+        <h2>
+          Important dates:
+        </h2>
+        April 23, 2021 - Submission deadline
+        May 14, 2021 - Notifications to contributors
+        May 24, 2021 - Camera-ready/final version deadline
+        July 12, 2021 - Workshops
+        (All deadlines are meant till 11.59 pm CET)
+
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
