--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,13 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
-        <h2>
+        <h3>
           Important dates:
-        </h2>
-        April 23, 2021 - Submission deadline
-        May 14, 2021 - Notifications to contributors
-        May 24, 2021 - Camera-ready/final version deadline
-        July 12, 2021 - Workshops
+        </h3>
+        April 23, 2021 - Submission deadline<br>
+        May 14, 2021 - Notifications to contributors<br>
+        May 24, 2021 - Camera-ready/final version deadline<br>
+        July 12, 2021 - Workshops<br>
         (All deadlines are meant till 11.59 pm CET)
 
         {% if site.logo %}
