--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         May 14, 2021 - Notifications to contributors<br>
         May 24, 2021 - Camera-ready/final version deadline<br>
         July 12, 2021 - Workshops<br>
-        (All deadlines are meant till 11.59 pm CET)
+        (deadlines are meant till 11.59 pm CET)
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
