--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         <h3>
           Important dates:
         </h3>
-        April 23, 2021 - Submission deadline<br>
+        <b>(extended)</b> May 2nd, 2021 - Submission deadline<br>
         May 14, 2021 - Notifications to contributors<br>
         May 24, 2021 - Camera-ready/final version deadline<br>
         July 12, 2021 - Workshops<br>
