--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         <h3>
-          Important dates:
+          Important dates (updated):
         </h3>
         <b>[extended]</b> May 2nd, 2021 - Paper submission<br>
         May 14, 2021 - Notifications to contributors<br>
